Geometrik/ScannerParser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    BREAK

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID add_global_function SEMICOLON goto_main vars function main endProgram
Rule 2     endProgram -> <empty>
Rule 3     add_global_function -> <empty>
Rule 4     main -> INTTYPE MAIN change_to_global LPAREN RPAREN add_jump_to_main block
Rule 5     change_to_global -> <empty>
Rule 6     goto_main -> <empty>
Rule 7     add_jump_to_main -> <empty>
Rule 8     block -> LBRACE blockprima RBRACE
Rule 9     blockprima -> statute blockprima
Rule 10    blockprima -> empty
Rule 11    statute -> assignment
Rule 12    statute -> condition
Rule 13    statute -> write
Rule 14    statute -> read
Rule 15    statute -> cycle
Rule 16    statute -> functioncall SEMICOLON
Rule 17    statute -> predefined
Rule 18    statute -> return
Rule 19    condition -> IF LPAREN sexpression RPAREN do_condition_operation block else
Rule 20    do_condition_operation -> <empty>
Rule 21    else -> ELSE do_else_operation block
Rule 22    else -> empty
Rule 23    do_else_operation -> <empty>
Rule 24    vars -> VAR type ID array_declaration store_variable SEMICOLON vars
Rule 25    vars -> empty
Rule 26    store_variable -> <empty>
Rule 27    array_declaration -> LBRACKET dimen_variable sexpression calculate_dimen RBRACKET
Rule 28    array_declaration -> empty
Rule 29    dimen_variable -> <empty>
Rule 30    calculate_dimen -> <empty>
Rule 31    type -> INTTYPE
Rule 32    type -> FLOATTYPE
Rule 33    type -> STRINGTYPE
Rule 34    type -> BOOLTYPE
Rule 35    assignment -> ID push_id_operand array ASSIGN push_operator sexpression SEMICOLON
Rule 36    push_id_operand -> <empty>
Rule 37    push_operator -> <empty>
Rule 38    array_structure -> LBRACKET sexpression RBRACKET
Rule 39    array_structure -> empty
Rule 40    sexpression -> negation expression do_not_operation
Rule 41    negation -> NOT push_operator
Rule 42    negation -> empty
Rule 43    do_not_operation -> <empty>
Rule 44    expression -> expression relationaloperators push_operator exp do_relational_operation
Rule 45    expression -> exp
Rule 46    relationaloperators -> LESSER
Rule 47    relationaloperators -> GREATER
Rule 48    relationaloperators -> EQUAL
Rule 49    relationaloperators -> NOTEQUAL
Rule 50    relationaloperators -> LESSEROREQUAL
Rule 51    relationaloperators -> GREATEROREQUAL
Rule 52    relationaloperators -> AND
Rule 53    relationaloperators -> OR
Rule 54    do_relational_operation -> <empty>
Rule 55    exp -> exp mathoperators1 push_operator term do_math_operation1
Rule 56    exp -> term
Rule 57    mathoperators1 -> PLUS
Rule 58    mathoperators1 -> MINUS
Rule 59    do_math_operation1 -> <empty>
Rule 60    term -> term mathoperators2 push_operator factor do_math_operation2
Rule 61    term -> factor
Rule 62    mathoperators2 -> TIMES
Rule 63    mathoperators2 -> DEVIDE
Rule 64    do_math_operation2 -> <empty>
Rule 65    factor -> LPAREN push_false_bottom sexpression RPAREN pop_false_bottom
Rule 66    factor -> varConst
Rule 67    push_false_bottom -> <empty>
Rule 68    pop_false_bottom -> <empty>
Rule 69    varConst -> ID push_id_operand array
Rule 70    varConst -> FLOAT push_float_operand
Rule 71    varConst -> INT push_int_operand
Rule 72    varConst -> bool push_bool_operand
Rule 73    varConst -> STRING push_string_operand
Rule 74    varConst -> predefined
Rule 75    varConst -> functioncall
Rule 76    array -> LBRACKET access_dimen_var sexpression validate_index RBRACKET
Rule 77    array -> empty
Rule 78    validate_index -> <empty>
Rule 79    access_dimen_var -> <empty>
Rule 80    bool -> TRUE
Rule 81    bool -> FALSE
Rule 82    push_float_operand -> <empty>
Rule 83    push_int_operand -> <empty>
Rule 84    push_bool_operand -> <empty>
Rule 85    push_string_operand -> <empty>
Rule 86    functioncall -> ID check_function_existance LPAREN generate_era funcargum RPAREN validate_arguments
Rule 87    check_function_existance -> <empty>
Rule 88    generate_era -> <empty>
Rule 89    validate_arguments -> <empty>
Rule 90    funcargum -> sexpression store_argument funcargumprima
Rule 91    funcargum -> empty
Rule 92    funcargumprima -> COMMA sexpression store_argument funcargumprima
Rule 93    funcargumprima -> empty
Rule 94    store_argument -> <empty>
Rule 95    function -> FUNCTION functiontype ID store_function LPAREN parameter RPAREN vars add_func_quad_start block end_process function
Rule 96    function -> empty
Rule 97    functiontype -> VOID
Rule 98    functiontype -> type
Rule 99    add_func_quad_start -> <empty>
Rule 100   store_function -> <empty>
Rule 101   end_process -> <empty>
Rule 102   return -> RETURN sexpression SEMICOLON
Rule 103   parameter -> type ID store_parameter array parameterprima
Rule 104   parameter -> empty
Rule 105   parameterprima -> COMMA type ID store_parameter parameterprima
Rule 106   parameterprima -> empty
Rule 107   store_parameter -> <empty>
Rule 108   write -> PRINT LPAREN sexpression RPAREN SEMICOLON
Rule 109   read -> ID push_id_operand array ASSIGN push_operator INPUT SEMICOLON
Rule 110   cycle -> WHILE push_cycle_jump LPAREN sexpression RPAREN do_while_operation block
Rule 111   push_cycle_jump -> <empty>
Rule 112   do_while_operation -> <empty>
Rule 113   color -> BLUE
Rule 114   color -> GREEN
Rule 115   color -> RED
Rule 116   color -> YELLOW
Rule 117   color -> BROWN
Rule 118   color -> BLACK
Rule 119   predefined -> drawline
Rule 120   predefined -> drawsquare
Rule 121   predefined -> drawtriangle
Rule 122   predefined -> drawcircle
Rule 123   predefined -> drawcurve
Rule 124   predefined -> drawpolygon
Rule 125   drawline -> DRAWLINE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
Rule 126   drawsquare -> DRAWSQUARE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
Rule 127   drawtriangle -> DRAWTRIANGLE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
Rule 128   drawcircle -> DRAWCIRCLE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
Rule 129   drawcurve -> DRAWCURVE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
Rule 130   drawpolygon -> DRAWPOLYGON LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
Rule 131   store_predefined_argument -> <empty>
Rule 132   store_color -> <empty>
Rule 133   empty -> <empty>

Terminals, with rules where they appear

AND                  : 52
ASSIGN               : 35 109
BLACK                : 118
BLUE                 : 113
BOOLTYPE             : 34
BREAK                : 
BROWN                : 117
COLON                : 
COMMA                : 92 105 125 125 125 125 126 126 127 127 128 128 129 129 130 130
DEVIDE               : 63
DRAWCIRCLE           : 128
DRAWCURVE            : 129
DRAWLINE             : 125
DRAWPOLYGON          : 130
DRAWSQUARE           : 126
DRAWTRIANGLE         : 127
ELSE                 : 21
EQUAL                : 48
FALSE                : 81
FLOAT                : 70
FLOATTYPE            : 32
FUNCTION             : 95
GREATER              : 47
GREATEROREQUAL       : 51
GREEN                : 114
ID                   : 1 24 35 69 86 95 103 105 109
IF                   : 19
INPUT                : 109
INT                  : 71
INTTYPE              : 4 31
LBRACE               : 8
LBRACKET             : 27 38 76
LESSER               : 46
LESSEROREQUAL        : 50
LPAREN               : 4 19 65 86 95 108 110 125 126 127 128 129 130
MAIN                 : 4
MINUS                : 58
NOT                  : 41
NOTEQUAL             : 49
OR                   : 53
PLUS                 : 57
PRINT                : 108
PROGRAM              : 1
RBRACE               : 8
RBRACKET             : 27 38 76
RED                  : 115
RETURN               : 102
RPAREN               : 4 19 65 86 95 108 110 125 126 127 128 129 130
SEMICOLON            : 1 16 24 35 102 108 109 125 126 127 128 129 130
STRING               : 73
STRINGTYPE           : 33
TIMES                : 62
TRUE                 : 80
VAR                  : 24
VOID                 : 97
WHILE                : 110
YELLOW               : 116
error                : 

Nonterminals, with rules where they appear

access_dimen_var     : 76
add_func_quad_start  : 95
add_global_function  : 1
add_jump_to_main     : 4
array                : 35 69 103 109
array_declaration    : 24
array_structure      : 
assignment           : 11
block                : 4 19 21 95 110
blockprima           : 8 9
bool                 : 72
calculate_dimen      : 27
change_to_global     : 4
check_function_existance : 86
color                : 125 126 127 128 129 130
condition            : 12
cycle                : 15
dimen_variable       : 27
do_condition_operation : 19
do_else_operation    : 21
do_math_operation1   : 55
do_math_operation2   : 60
do_not_operation     : 40
do_relational_operation : 44
do_while_operation   : 110
drawcircle           : 122
drawcurve            : 123
drawline             : 119
drawpolygon          : 124
drawsquare           : 120
drawtriangle         : 121
else                 : 19
empty                : 10 22 25 28 39 42 77 91 93 96 104 106
endProgram           : 1
end_process          : 95
exp                  : 44 45 55
expression           : 40 44
factor               : 60 61
funcargum            : 86
funcargumprima       : 90 92
function             : 1 95
functioncall         : 16 75
functiontype         : 95
generate_era         : 86
goto_main            : 1
main                 : 1
mathoperators1       : 55
mathoperators2       : 60
negation             : 40
parameter            : 95
parameterprima       : 103 105
pop_false_bottom     : 65
predefined           : 17 74
program              : 0
push_bool_operand    : 72
push_cycle_jump      : 110
push_false_bottom    : 65
push_float_operand   : 70
push_id_operand      : 35 69 109
push_int_operand     : 71
push_operator        : 35 41 44 55 60 109
push_string_operand  : 73
read                 : 14
relationaloperators  : 44
return               : 18
sexpression          : 19 27 35 38 65 76 90 92 102 108 110 125 125 125 125 126 126 127 127 128 128 129 129 130 130
statute              : 9
store_argument       : 90 92
store_color          : 125 126 127 128 129 130
store_function       : 95
store_parameter      : 103 105
store_predefined_argument : 125 125 125 125 126 126 127 127 128 128 129 129 130 130
store_variable       : 24
term                 : 55 56 60
type                 : 24 98 103 105
validate_arguments   : 86
validate_index       : 76
varConst             : 66
vars                 : 1 24 95
write                : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID add_global_function SEMICOLON goto_main vars function main endProgram

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID add_global_function SEMICOLON goto_main vars function main endProgram

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . add_global_function SEMICOLON goto_main vars function main endProgram
    (3) add_global_function -> .

    SEMICOLON       reduce using rule 3 (add_global_function -> .)

    add_global_function            shift and go to state 4

state 4

    (1) program -> PROGRAM ID add_global_function . SEMICOLON goto_main vars function main endProgram

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM ID add_global_function SEMICOLON . goto_main vars function main endProgram
    (6) goto_main -> .

    VAR             reduce using rule 6 (goto_main -> .)
    FUNCTION        reduce using rule 6 (goto_main -> .)
    INTTYPE         reduce using rule 6 (goto_main -> .)

    goto_main                      shift and go to state 6

state 6

    (1) program -> PROGRAM ID add_global_function SEMICOLON goto_main . vars function main endProgram
    (24) vars -> . VAR type ID array_declaration store_variable SEMICOLON vars
    (25) vars -> . empty
    (133) empty -> .

    VAR             shift and go to state 8
    FUNCTION        reduce using rule 133 (empty -> .)
    INTTYPE         reduce using rule 133 (empty -> .)

    vars                           shift and go to state 7
    empty                          shift and go to state 9

state 7

    (1) program -> PROGRAM ID add_global_function SEMICOLON goto_main vars . function main endProgram
    (95) function -> . FUNCTION functiontype ID store_function LPAREN parameter RPAREN vars add_func_quad_start block end_process function
    (96) function -> . empty
    (133) empty -> .

    FUNCTION        shift and go to state 11
    INTTYPE         reduce using rule 133 (empty -> .)

    function                       shift and go to state 10
    empty                          shift and go to state 12

state 8

    (24) vars -> VAR . type ID array_declaration store_variable SEMICOLON vars
    (31) type -> . INTTYPE
    (32) type -> . FLOATTYPE
    (33) type -> . STRINGTYPE
    (34) type -> . BOOLTYPE

    INTTYPE         shift and go to state 16
    FLOATTYPE       shift and go to state 15
    STRINGTYPE      shift and go to state 14
    BOOLTYPE        shift and go to state 13

    type                           shift and go to state 17

state 9

    (25) vars -> empty .

    LBRACE          reduce using rule 25 (vars -> empty .)
    FUNCTION        reduce using rule 25 (vars -> empty .)
    INTTYPE         reduce using rule 25 (vars -> empty .)


state 10

    (1) program -> PROGRAM ID add_global_function SEMICOLON goto_main vars function . main endProgram
    (4) main -> . INTTYPE MAIN change_to_global LPAREN RPAREN add_jump_to_main block

    INTTYPE         shift and go to state 18

    main                           shift and go to state 19

state 11

    (95) function -> FUNCTION . functiontype ID store_function LPAREN parameter RPAREN vars add_func_quad_start block end_process function
    (97) functiontype -> . VOID
    (98) functiontype -> . type
    (31) type -> . INTTYPE
    (32) type -> . FLOATTYPE
    (33) type -> . STRINGTYPE
    (34) type -> . BOOLTYPE

    VOID            shift and go to state 21
    INTTYPE         shift and go to state 16
    FLOATTYPE       shift and go to state 15
    STRINGTYPE      shift and go to state 14
    BOOLTYPE        shift and go to state 13

    functiontype                   shift and go to state 20
    type                           shift and go to state 22

state 12

    (96) function -> empty .

    INTTYPE         reduce using rule 96 (function -> empty .)


state 13

    (34) type -> BOOLTYPE .

    ID              reduce using rule 34 (type -> BOOLTYPE .)


state 14

    (33) type -> STRINGTYPE .

    ID              reduce using rule 33 (type -> STRINGTYPE .)


state 15

    (32) type -> FLOATTYPE .

    ID              reduce using rule 32 (type -> FLOATTYPE .)


state 16

    (31) type -> INTTYPE .

    ID              reduce using rule 31 (type -> INTTYPE .)


state 17

    (24) vars -> VAR type . ID array_declaration store_variable SEMICOLON vars

    ID              shift and go to state 23


state 18

    (4) main -> INTTYPE . MAIN change_to_global LPAREN RPAREN add_jump_to_main block

    MAIN            shift and go to state 24


state 19

    (1) program -> PROGRAM ID add_global_function SEMICOLON goto_main vars function main . endProgram
    (2) endProgram -> .

    $end            reduce using rule 2 (endProgram -> .)

    endProgram                     shift and go to state 25

state 20

    (95) function -> FUNCTION functiontype . ID store_function LPAREN parameter RPAREN vars add_func_quad_start block end_process function

    ID              shift and go to state 26


state 21

    (97) functiontype -> VOID .

    ID              reduce using rule 97 (functiontype -> VOID .)


state 22

    (98) functiontype -> type .

    ID              reduce using rule 98 (functiontype -> type .)


state 23

    (24) vars -> VAR type ID . array_declaration store_variable SEMICOLON vars
    (27) array_declaration -> . LBRACKET dimen_variable sexpression calculate_dimen RBRACKET
    (28) array_declaration -> . empty
    (133) empty -> .

    LBRACKET        shift and go to state 27
    SEMICOLON       reduce using rule 133 (empty -> .)

    array_declaration              shift and go to state 28
    empty                          shift and go to state 29

state 24

    (4) main -> INTTYPE MAIN . change_to_global LPAREN RPAREN add_jump_to_main block
    (5) change_to_global -> .

    LPAREN          reduce using rule 5 (change_to_global -> .)

    change_to_global               shift and go to state 30

state 25

    (1) program -> PROGRAM ID add_global_function SEMICOLON goto_main vars function main endProgram .

    $end            reduce using rule 1 (program -> PROGRAM ID add_global_function SEMICOLON goto_main vars function main endProgram .)


state 26

    (95) function -> FUNCTION functiontype ID . store_function LPAREN parameter RPAREN vars add_func_quad_start block end_process function
    (100) store_function -> .

    LPAREN          reduce using rule 100 (store_function -> .)

    store_function                 shift and go to state 31

state 27

    (27) array_declaration -> LBRACKET . dimen_variable sexpression calculate_dimen RBRACKET
    (29) dimen_variable -> .

    NOT             reduce using rule 29 (dimen_variable -> .)
    LPAREN          reduce using rule 29 (dimen_variable -> .)
    ID              reduce using rule 29 (dimen_variable -> .)
    FLOAT           reduce using rule 29 (dimen_variable -> .)
    INT             reduce using rule 29 (dimen_variable -> .)
    STRING          reduce using rule 29 (dimen_variable -> .)
    TRUE            reduce using rule 29 (dimen_variable -> .)
    FALSE           reduce using rule 29 (dimen_variable -> .)
    DRAWLINE        reduce using rule 29 (dimen_variable -> .)
    DRAWSQUARE      reduce using rule 29 (dimen_variable -> .)
    DRAWTRIANGLE    reduce using rule 29 (dimen_variable -> .)
    DRAWCIRCLE      reduce using rule 29 (dimen_variable -> .)
    DRAWCURVE       reduce using rule 29 (dimen_variable -> .)
    DRAWPOLYGON     reduce using rule 29 (dimen_variable -> .)

    dimen_variable                 shift and go to state 32

state 28

    (24) vars -> VAR type ID array_declaration . store_variable SEMICOLON vars
    (26) store_variable -> .

    SEMICOLON       reduce using rule 26 (store_variable -> .)

    store_variable                 shift and go to state 33

state 29

    (28) array_declaration -> empty .

    SEMICOLON       reduce using rule 28 (array_declaration -> empty .)


state 30

    (4) main -> INTTYPE MAIN change_to_global . LPAREN RPAREN add_jump_to_main block

    LPAREN          shift and go to state 34


state 31

    (95) function -> FUNCTION functiontype ID store_function . LPAREN parameter RPAREN vars add_func_quad_start block end_process function

    LPAREN          shift and go to state 35


state 32

    (27) array_declaration -> LBRACKET dimen_variable . sexpression calculate_dimen RBRACKET
    (40) sexpression -> . negation expression do_not_operation
    (41) negation -> . NOT push_operator
    (42) negation -> . empty
    (133) empty -> .

    NOT             shift and go to state 38
    LPAREN          reduce using rule 133 (empty -> .)
    ID              reduce using rule 133 (empty -> .)
    FLOAT           reduce using rule 133 (empty -> .)
    INT             reduce using rule 133 (empty -> .)
    STRING          reduce using rule 133 (empty -> .)
    TRUE            reduce using rule 133 (empty -> .)
    FALSE           reduce using rule 133 (empty -> .)
    DRAWLINE        reduce using rule 133 (empty -> .)
    DRAWSQUARE      reduce using rule 133 (empty -> .)
    DRAWTRIANGLE    reduce using rule 133 (empty -> .)
    DRAWCIRCLE      reduce using rule 133 (empty -> .)
    DRAWCURVE       reduce using rule 133 (empty -> .)
    DRAWPOLYGON     reduce using rule 133 (empty -> .)

    negation                       shift and go to state 36
    sexpression                    shift and go to state 37
    empty                          shift and go to state 39

state 33

    (24) vars -> VAR type ID array_declaration store_variable . SEMICOLON vars

    SEMICOLON       shift and go to state 40


state 34

    (4) main -> INTTYPE MAIN change_to_global LPAREN . RPAREN add_jump_to_main block

    RPAREN          shift and go to state 41


state 35

    (95) function -> FUNCTION functiontype ID store_function LPAREN . parameter RPAREN vars add_func_quad_start block end_process function
    (103) parameter -> . type ID store_parameter array parameterprima
    (104) parameter -> . empty
    (31) type -> . INTTYPE
    (32) type -> . FLOATTYPE
    (33) type -> . STRINGTYPE
    (34) type -> . BOOLTYPE
    (133) empty -> .

    INTTYPE         shift and go to state 16
    FLOATTYPE       shift and go to state 15
    STRINGTYPE      shift and go to state 14
    BOOLTYPE        shift and go to state 13
    RPAREN          reduce using rule 133 (empty -> .)

    empty                          shift and go to state 42
    type                           shift and go to state 43
    parameter                      shift and go to state 44

state 36

    (40) sexpression -> negation . expression do_not_operation
    (44) expression -> . expression relationaloperators push_operator exp do_relational_operation
    (45) expression -> . exp
    (55) exp -> . exp mathoperators1 push_operator term do_math_operation1
    (56) exp -> . term
    (60) term -> . term mathoperators2 push_operator factor do_math_operation2
    (61) term -> . factor
    (65) factor -> . LPAREN push_false_bottom sexpression RPAREN pop_false_bottom
    (66) factor -> . varConst
    (69) varConst -> . ID push_id_operand array
    (70) varConst -> . FLOAT push_float_operand
    (71) varConst -> . INT push_int_operand
    (72) varConst -> . bool push_bool_operand
    (73) varConst -> . STRING push_string_operand
    (74) varConst -> . predefined
    (75) varConst -> . functioncall
    (80) bool -> . TRUE
    (81) bool -> . FALSE
    (119) predefined -> . drawline
    (120) predefined -> . drawsquare
    (121) predefined -> . drawtriangle
    (122) predefined -> . drawcircle
    (123) predefined -> . drawcurve
    (124) predefined -> . drawpolygon
    (86) functioncall -> . ID check_function_existance LPAREN generate_era funcargum RPAREN validate_arguments
    (125) drawline -> . DRAWLINE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
    (126) drawsquare -> . DRAWSQUARE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
    (127) drawtriangle -> . DRAWTRIANGLE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
    (128) drawcircle -> . DRAWCIRCLE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
    (129) drawcurve -> . DRAWCURVE LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON
    (130) drawpolygon -> . DRAWPOLYGON LPAREN sexpression store_predefined_argument COMMA sexpression store_predefined_argument COMMA color store_color RPAREN SEMICOLON

    LPAREN          shift and go to state 63
    ID              shift and go to state 64
    FLOAT           shift and go to state 68
    INT             shift and go to state 67
    STRING          shift and go to state 51
    TRUE            shift and go to state 49
    FALSE           shift and go to state 55
    DRAWLINE        shift and go to state 50
    DRAWSQUARE      shift and go to state 62
    DRAWTRIANGLE    shift and go to state 56
    DRAWCIRCLE      shift and go to state 53
    DRAWCURVE       shift and go to state 69
    DRAWPOLYGON     shift and go to state 66

    drawtriangle                   shift and go to state 45
    varConst                       shift and go to state 46
    drawcurve                      shift and go to state 47
    predefined                     shift and go to state 52
    drawline                       shift and go to state 54
    bool                           shift and go to state 57
    factor                         shift and go to state 58
    drawcircle                     shift and go to state 59
    exp                            shift and go to state 60
    drawpolygon                    shift and go to state 61
    term                           shift and go to state 65
    drawsquare                     shift and go to state 48
    functioncall                   shift and go to state 70
    expression                     shift and go to state 71

state 37

    (27) array_declaration -> LBRACKET dimen_variable sexpression . calculate_dimen RBRACKET
    (30) calculate_dimen -> .

    RBRACKET        reduce using rule 30 (calculate_dimen -> .)

    calculate_dimen                shift and go to state 72

state 38

    (41) negation -> NOT . push_operator
    (37) push_operator -> .

    LPAREN          reduce using rule 37 (push_operator -> .)
    ID              reduce using rule 37 (push_operator -> .)
    FLOAT           reduce using rule 37 (push_operator -> .)
    INT             reduce using rule 37 (push_operator -> .)
    STRING          reduce using rule 37 (push_operator -> .)
    TRUE            reduce using rule 37 (push_operator -> .)
    FALSE           reduce using rule 37 (push_operator -> .)
    DRAWLINE        reduce using rule 37 (push_operator -> .)
    DRAWSQUARE      reduce using rule 37 (push_operator -> .)
    DRAWTRIANGLE    reduce using rule 37 (push_operator -> .)
    DRAWCIRCLE      reduce using rule 37 (push_operator -> .)
    DRAWCURVE       reduce using rule 37 (push_operator -> .)
    DRAWPOLYGON     reduce using rule 37 (push_operator -> .)

    push_operator                  shift and go to state 73

state 39

    (42) negation -> empty .

    LPAREN          reduce using rule 42 (negation -> empty .)
    ID              reduce using rule 42 (negation -> empty .)
    FLOAT           reduce using rule 42 (negation -> empty .)
    INT             reduce using rule 42 (negation -> empty .)
    STRING          reduce using rule 42 (negation -> empty .)
    TRUE            reduce using rule 42 (negation -> empty .)
    FALSE           reduce using rule 42 (negation -> empty .)
    DRAWLINE        reduce using rule 42 (negation -> empty .)
    DRAWSQUARE      reduce using rule 42 (negation -> empty .)
    DRAWTRIANGLE    reduce using rule 42 (negation -> empty .)
    DRAWCIRCLE      reduce using rule 42 (negation -> empty .)
    DRAWCURVE       reduce using rule 42 (negation -> empty .)
    DRAWPOLYGON     reduce using rule 42 (negation -> empty .)


state 40

    (24) vars -> VAR type ID array_declaration store_variable SEMICOLON . vars
    (24) vars -> . VAR type ID array_declaration store_variable SEMICOLON vars
    (25) vars -> . empty
    (133) empty -> .

    VAR             shift and go to state 8
    FUNCTION        reduce using rule 133 (empty -> .)
    INTTYPE         reduce using rule 133 (empty -> .)
    LBRACE          reduce using rule 133 (empty -> .)

    empty                          shift and go to state 9
    vars                           shift and go to state 74

state 41

    (4) main -> INTTYPE MAIN change_to_global LPAREN RPAREN . add_jump_to_main block
    (7) add_jump_to_main -> .

    LBRACE          reduce using rule 7 (add_jump_to_main -> .)

    add_jump_to_main               shift and go to state 75

state 42

    (104) parameter -> empty .

    RPAREN          reduce using rule 104 (parameter -> empty .)


state 43

    (103) parameter -> type . ID store_parameter array parameterprima

    ID              shift and go to state 76


state 44

    (95) function -> FUNCTION functiontype ID store_function LPAREN parameter . RPAREN vars add_func_quad_start block end_process function

    RPAREN          shift and go to state 77


state 45

    (121) predefined -> drawtriangle .

    ID              reduce using rule 121 (predefined -> drawtriangle .)
    IF              reduce using rule 121 (predefined -> drawtriangle .)
    PRINT           reduce using rule 121 (predefined -> drawtriangle .)
    WHILE           reduce using rule 121 (predefined -> drawtriangle .)
    RETURN          reduce using rule 121 (predefined -> drawtriangle .)
    DRAWLINE        reduce using rule 121 (predefined -> drawtriangle .)
    DRAWSQUARE      reduce using rule 121 (predefined -> drawtriangle .)
    DRAWTRIANGLE    reduce using rule 121 (predefined -> drawtriangle .)
    DRAWCIRCLE      reduce using rule 121 (predefined -> drawtriangle .)
    DRAWCURVE       reduce using rule 121 (predefined -> drawtriangle .)
    DRAWPOLYGON     reduce using rule 121 (predefined -> drawtriangle .)
    RBRACE          reduce using rule 121 (predefined -> drawtriangle .)
    TIMES           reduce using rule 121 (predefined -> drawtriangle .)
    DEVIDE          reduce using rule 121 (predefined -> drawtriangle .)
    PLUS            reduce using rule 121 (predefined -> drawtriangle .)
    MINUS           reduce using rule 121 (predefined -> drawtriangle .)
    LESSER          reduce using rule 121 (predefined -> drawtriangle .)
    GREATER         reduce using rule 121 (predefined -> drawtriangle .)
    EQUAL           reduce using rule 121 (predefined -> drawtriangle .)
    NOTEQUAL        reduce using rule 121 (predefined -> drawtriangle .)
    LESSEROREQUAL   reduce using rule 121 (predefined -> drawtriangle .)
    GREATEROREQUAL  reduce using rule 121 (predefined -> drawtriangle .)
    AND             reduce using rule 121 (predefined -> drawtriangle .)
    OR              reduce using rule 121 (predefined -> drawtriangle .)
    RBRACKET        reduce using rule 121 (predefined -> drawtriangle .)
    COMMA           reduce using rule 121 (predefined -> drawtriangle .)
    RPAREN          reduce using rule 121 (predefined -> drawtriangle .)
    SEMICOLON       reduce using rule 121 (predefined -> drawtriangle .)


state 46

    (66) factor -> varConst .

    TIMES           reduce using rule 66 (factor -> varConst .)
    DEVIDE          reduce using rule 66 (factor -> varConst .)
    PLUS            reduce using rule 66 (factor -> varConst .)
    MINUS           reduce using rule 66 (factor -> varConst .)
    LESSER          reduce using rule 66 (factor -> varConst .)
    GREATER         reduce using rule 66 (factor -> varConst .)
    EQUAL           reduce using rule 66 (factor -> varConst .)
    NOTEQUAL        reduce using rule 66 (factor -> varConst .)
    LESSEROREQUAL   reduce using rule 66 (factor -> varConst .)
    GREATEROREQUAL  reduce using rule 66 (factor -> varConst .)
    AND             reduce using rule 66 (factor -> varConst .)
    OR              reduce using rule 66 (factor -> varConst .)
    RBRACKET        reduce using rule 66 (factor -> varConst .)
    COMMA           reduce using rule 66 (factor -> varConst .)
    RPAREN          reduce using rule 66 (factor -> varConst .)
    SEMICOLON       reduce using rule 66 (factor -> varConst .)


state 47

    (123) predefined -> drawcurve .

    ID              reduce using rule 123 (predefined -> drawcurve .)
    IF              reduce using rule 123 (predefined -> drawcurve .)
    PRINT           reduce using rule 123 (predefined -> drawcurve .)
    WHILE           reduce using rule 123 (predefined -> drawcurve .)
    RETURN          reduce using rule 123 (predefined -> drawcurve .)
    DRAWLINE        reduce using rule 123 (predefined -> drawcurve .)
    DRAWSQUARE      reduce using rule 123 (predefined -> drawcurve .)
    DRAWTRIANGLE    reduce using rule 123 (predefined -> drawcurve .)
    DRAWCIRCLE      reduce using rule 123 (predefined -> drawcurve .)
    DRAWCURVE       reduce using rule 123 (predefined -> drawcurve .)
    DRAWPOLYGON     reduce using rule 123 (predefined -> drawcurve .)
    RBRACE          reduce using rule 123 (predefined -> drawcurve .)
    TIMES           reduce using rule 123 (predefined -> drawcurve .)
    DEVIDE          reduce using rule 123 (predefined -> drawcurve .)
    PLUS            reduce using rule 123 (predefined -> drawcurve .)
    MINUS           reduce using rule 123 (predefined -> drawcurve .)
    LESSER          reduce using rule 123 (predefined -> drawcurve .)
    GREATER         reduce using rule 123 (predefined -> drawcurve .)
    EQUAL           reduce using rule 123 (predefined -> drawcurve .)
    NOTEQUAL        reduce using rule 123 (predefined -> drawcurve .)
    LESSEROREQUAL   reduce using rule 123 (predefined -> drawcurve .)
    GREATEROREQUAL  reduce using rule 123 (predefined -> drawcurve .)
    AND             reduce using rule 123 (predefined -> drawcurve .)
    OR              reduce using rule 123 (predefined -> drawcurve .)
    RBRACKET        reduce using rule 123 (predefined -> drawcurve .)
    COMMA           reduce using rule 123 (predefined -> drawcurve .)
    RPAREN          reduce using rule 123 (predefined -> drawcurve .)
    SEMICOLON       reduce using rule 123 (predefined -> drawcurve .)


state 48

    (120) predefined -> drawsquare .
